# agent-firewall-control-panel

./: .dockerignore  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  GOVERNANCE.md  LICENSE  README.md  start.sh
adrs/: ADR-001-mcp-first.md  ADR-002-otel-native.md  ADR-003-enforcement-wedge.md
bindings/node/: package.json  vitest.config.ts
bindings/node/__tests__/: smoke.test.ts  witness-parity.test.ts
bindings/python/tests/: conftest.py  test_smoke.py  test_witness_parity.py
crates/agentfirewall-cli/: Cargo.toml  build.rs
crates/agentfirewall-cli/src/: client.rs  grpc.rs  main.rs
crates/agentfirewall-cli/tests/: accessibility_cli.rs
crates/agentfirewall-core/: Cargo.toml
crates/agentfirewall-core/src/: config.rs  error.rs  lib.rs  policy.rs  reason.rs  run.rs  types.rs
crates/agentfirewall-embed/: Cargo.toml
crates/agentfirewall-embed/src/: engine.rs  lib.rs  similarity.rs
crates/agentfirewall-learner/: Cargo.toml
crates/agentfirewall-learner/src/: client.rs  error.rs  lib.rs  mode.rs  span.rs
crates/agentfirewall-node/: Cargo.toml  index.d.ts  index.js  package.json
crates/agentfirewall-node/src/: lib.rs
crates/agentfirewall-python/: Cargo.toml  pyproject.toml
crates/agentfirewall-python/src/: lib.rs  util.rs
crates/agentfirewall-sentinel/: Cargo.toml
crates/agentfirewall-sentinel/src/: config.rs  intervention.rs  lib.rs  progress.rs  tracker.rs
crates/agentfirewall-server/: Cargo.toml  build.rs
crates/agentfirewall-server/src/: config.rs  db.rs  health.rs  idempotency.rs  lib.rs  main.rs  metrics.rs  nats.rs  proto.rs  request_id.rs
crates/agentfirewall-server/src/app/: error.rs
crates/agentfirewall-server/src/auth/: api_key.rs  middleware.rs  mod.rs  tenant.rs  types.rs
crates/agentfirewall-server/src/rest/: approval.rs  bridge.rs  error.rs  incident.rs  learner.rs  mod.rs  policy.rs  router.rs  run.rs  state.rs
crates/agentfirewall-server/src/services/: approval.rs  audit.rs  baseline.rs  incident.rs  learner.rs  mod.rs  policy.rs  run.rs  span_ingest.rs  webhook.rs
crates/agentfirewall-server/src/services/tests/: mod.rs  security_matrix.rs
crates/agentfirewall-witness/: Cargo.toml
crates/agentfirewall-witness/src/: canonical.rs  capture.rs  guard.rs  hash.rs  lib.rs  revalidation.rs
docker/: .env.example  docker-compose.yml
docs/accessibility/: operator-ui-checklist.md
docs/api/: error-envelope.md
docs/assets/: gemini-image-prompts.md
migrations/clickhouse/: 0001_spans.sql  0002_baselines.sql  0003_baseline_numeric_metrics.sql
migrations/postgres/: 0001_initial.sql  0002_approvals_incidents.sql  0003_api_keys.sql  0004_idempotency.sql
proto/agentfirewall/approval/v1/: approval.proto
proto/agentfirewall/common/v1/: common.proto
proto/agentfirewall/incident/v1/: incident.proto
proto/agentfirewall/learner/v1/: learner.proto
proto/agentfirewall/policy/v1/: policy.proto
proto/agentfirewall/run/v1/: run.proto
tests/fixtures/: witness_golden_vectors.json
tests/integration/: Cargo.toml
tests/integration/src/harness/: client.rs  mod.rs
tests/integration/tests/: approval_witness_path.rs  idempotency_replay.rs  rest_grpc_parity.rs  tenant_isolation.rs
