[package]
name = "agentfirewall-learner"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Observe-to-enforce learner client for Agent FirewallKit"

[dependencies]
agentfirewall-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
async-nats = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
