[package]
name = "agentfirewall-python"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Python bindings for Agent FirewallKit SDK"

[lib]
name = "agentfirewall"
crate-type = ["cdylib"]

[dependencies]
agentfirewall-core = { workspace = true }
agentfirewall-sentinel = { workspace = true }
agentfirewall-witness = { workspace = true }
agentfirewall-learner = { workspace = true }
agentfirewall-embed = { workspace = true }
pyo3 = { version = "0.23", features = ["extension-module"] }
pyo3-async-runtimes = { version = "0.23", features = ["tokio-runtime"] }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
tokio = { workspace = true }
rust_decimal = { workspace = true }
parking_lot = "0.12"
