[package]
name = "agentfirewall-server"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Agent FirewallKit control plane server (Axum + Tonic)"

[lib]
path = "src/lib.rs"

[[bin]]
name = "agentfirewall-server"
path = "src/main.rs"

[dependencies]
agentfirewall-core = { workspace = true }
agentfirewall-embed = { workspace = true }
agentfirewall-sentinel = { workspace = true }
agentfirewall-witness = { workspace = true }
agentfirewall-learner = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tokio = { workspace = true }
tonic = { workspace = true, features = ["tls"] }
prost = { workspace = true }
prost-types = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
sqlx = { workspace = true, features = ["rust_decimal"] }
redis = { workspace = true }
async-nats = { workspace = true }
rust_decimal = { workspace = true }
hmac = "0.12"
hex = "0.4"
sha2 = { workspace = true }
base64 = "0.22"
metrics = "0.24"
metrics-exporter-prometheus = "0.16"
reqwest = { version = "0.12", features = ["json"] }
subtle = "2.6"
http = "1"
http-body = "1"
bytes = "1"
pin-project-lite = "0.2"
futures-util = { version = "0.3", default-features = false, features = ["std", "async-await", "sink"] }

[build-dependencies]
tonic-build = { workspace = true }
protobuf-src = "2.1"

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros", "rt-multi-thread"] }
http-body-util = "0.1"
