[package]
name = "agentfirewall-witness"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "State-witness revalidation for Agent FirewallKit approvals"

[dependencies]
agentfirewall-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
sha2 = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
proptest = { workspace = true }
